// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`patch-thm-bump should assign a bump reference 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patched thm bump '' -> 'wpn\\wpn_pm\\wpn_pm_bump', written into <sandbox>/assigned.thm",
  ],
}
`;

exports[`patch-thm-bump should clear the bump reference 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patched thm bump '' -> none, written into <sandbox>/cleared.thm",
  ],
}
`;

exports[`patch-thm-bump should report a dry run without writing 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Dry run, nothing written, bump '' -> 'wpn\\wpn_pm\\wpn_pm_bump' and <sandbox>/never-written.thm would receive 160 bytes instead of 138",
  ],
}
`;

exports[`patch-thm-bump should rewrite in place when given no destination 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patched thm bump '' -> 'wpn\\wpn_pm\\wpn_pm_bump', written into <sandbox>/in-place.thm",
  ],
}
`;

exports[`patch-thm-bump should write the expected files 1`] = `
[
  {
    "path": "assigned.thm",
    "sha256": "133d45e8124b3228eef2d4374b447f5fc0ebc3d3f18f9e23fef0f09107c31105",
    "size": 160,
  },
  {
    "path": "cleared.thm",
    "sha256": "b343b3f1db388b598a3acf9374e81a50693dc37f8e9d652ffb2ba9b7991b6fc1",
    "size": 138,
  },
  {
    "path": "in-place.thm",
    "sha256": "133d45e8124b3228eef2d4374b447f5fc0ebc3d3f18f9e23fef0f09107c31105",
    "size": 160,
  },
]
`;
